chore: adding the client sub-project to the main project

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,6 @@
  */
 
 rootProject.name = 'distributed-monte-carlo-method'
-include 'master'
-include 'slave'
+include ':client'
+include ':master'
+include ':worker'
