feat: deploy test setup

--- a/master/src/main/resources/master.cfg
+++ b/master/src/main/resources/master.cfg
@@ -1,2 +1,11 @@
-# Configuración del maestro
-MasterAdapter.Endpoints= tcp -h localhost -p 10000
+# Configuración general del maestro
+MasterAdapter.Endpoints= tcp -h 10.147.19.97 -p 10000
+Ice.ThreadPool.Server.Size=10
+Ice.ThreadPool.Client.Size=10
+
+# Definición de los proxies de los workers
+# El formato es: nombre_proxy.Proxy=id:protocolo -h host -p puerto
+Worker1.Proxy=worker1:default -h 10.147.19.136 -p 10001
+Worker2.Proxy=worker2:default -h 10.147.19.214 -p 10002
+Worker3.Proxy=worker3:default -h 10.147.19.108 -p 10003
+Worker4.Proxy=worker4:default -h 10.147.19.230 -p 10004
